--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -46,6 +46,9 @@
 		<div class="container-login100 containere">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" action="/validarCuenta" method="POST">
+
+					<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+
 					<span class="login100-form-title p-b-26">
 						WELCOME TO TIO ELIAN'S
 					</span>
