--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
                 <img src="{{url_for('static', filename='/assets/images/logo1.png')}}" alt="Tio Elian's" width="100%" />
             </div>
             <form action = "http://127.0.0.1:5000//buscar" method = "POST">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="buscador">
                 <input type="search" aria-label="Search" autocomplete="off" class="buscar" name="vb">
                 <input type="image" src="{{url_for('static', filename='icone-loupe-noir.png')}}" alt="icono buscar" class="img_buscar">
