--- a/templates/verDetalleDeProducto.html
+++ b/templates/verDetalleDeProducto.html
@@ -86,6 +86,7 @@
                     </div>
                 {% else %}
                 <form action="/aniadirACarrito/{{productoRecibido._id}}/{{productoRecibido.precio}}" method="POST">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <div>
                         Cantidad: <input type="number" id="quantity" name="cant" min="1" max="999" class="inp-number" value="1">
                     </div>
